# cycax

./: .gitignore  DEADJOE  Jenkinsfile  Makefile  README.md  fan_example.py  mkdocs.yml  pyproject.toml
.gitea/workflows/: build.yaml
.github/workflows/: ci.yml
docs/content/: assemblies.md  cycad_api.md  cycad_example.md  cycad_user_api.md  examples.md  getting-started.md  index.md  installation.md  integrations.md  parts.md
docs/content/api/: index.md
examples/box/: .gitignore  Makefile  main.py
reports/: README.md
src/: fan_example.py  main.py
src/BaseBoard/: BaseBoard.json  BaseBoard.scad  BaseBoard.stl
src/Blob/: Blob.json  Blob.scad  Blob.stl
src/JSON/: face.json
src/SCAD/: face.scad
src/Thing/: Thing.json  Thing.scad  Thing.stl
src/Thlob/: Thlob.json  Thlob.scad
src/cycax/: __about__.py  __init__.py  main.py
src/cycax/cli/: cmd_build.py  cmd_config.py  config.py  main.py  run.py  tui.py
src/cycax/cycad/: Con_Cube.py  Cuboid.py  CycadPart.py  Engine.py  ExternalPart.py  Features.py  Figure.py  Holes.py  Location.py  Nut_Cut_Out.py  Part.py  Rectange_Cut_Out.py  SheetMetal.py  Sheet_Metal.py  Slot.py  __init__.py  assembly.py  assembly_blender.blend  assembly_blender.py  assembly_openscad.py  assembly_side.py  assembly_stl.py  beveled_edge.py  client.py  colour_to_rgb.py  complex_assembly.py  conn-cube.stl  cuboid.py  cycad_part.py  cycad_side.py  definition.json  engine.py  engine_freecad.py  engine_openscad.py  external_part.py  fan.py  features.py  figure.py  location.py  nut.py  (+7 more)
src/cycax/cycad/engines/: assembly_build123d.py  assembly_server.py  base_assembly_engine.py  base_part_engine.py  cycax_part_freecad.py  part_build123d.py  part_ezdxf.py  part_freecad.py  part_locallinklocation.py  part_openscad.py  part_server.py  shared_openscad.py  simple_2d.py  utils.py
src/cycax/parts/: fan.py  main.py
src/examples/: Makefile  Martins_Sled.py  README.md  assemblies.py  beveled_edges.py  box.py  box_with_concubes.py  classy_new.py  cube_with_holes.py  fan_example.py  flange.py  gear_factory.py  rounded_edges.py  simple_cube.py  slots.py  test.py  thlob_example.py  vents.py
src/freecad/: cycax_part_freecad.py  run_freecad.sh
test/: cycax-0.0.1-py3-none-any.whl
test-side/back/: back.step  back.stl
test-side/back/back_base/: back_base.gltf  back_base.step  back_base.stl
test-side/back/connect/: connect.step
test-side/bottom/: bottom.step  bottom.stl
test-side/bottom/bottom_base/: bottom_base.gltf  bottom_base.step
test-side/front/: front.step  front.stl
test-side/front/connect/: connect.step
test-side/front/front_base/: front_base.gltf  front_base.step
test-side/left/: left.step  left.stl
test-side/left/connect/: connect.gltf
test-side/left/left_base/: left_base.gltf  left_base.step
test-side/right/: right.step  right.stl
test-side/right/connect/: connect.step  connect.stl
test-side/right/right_base/: right_base.gltf  right_base.stl
test-side/top/: top.step  top.stl
test-side/top/connect/: connect.step
test-side/top/top_base/: top_base.gltf  top_base.step  top_base.stl
test_python_to_cad/: assembly.py  assembly_stl.py  con_cube.py  cuboid.py  decode.py  future.py  holes.py  location.py  main.py  nut_cut_out.py  part.py  rectange_cut_out.py  sheet_metal.py  slot.py
tests/: shared.py  test_add_cylinder.py  test_add_rectangle.py  test_add_sphere.py  test_assembly.py  test_bevel.py  test_box_location.py  test_complex_assembly.py  test_cycad_engine_utils.py  test_cylinder.py  test_dynamic.py  test_export.py  test_fail.py  test_fan.py  test_files.py  test_hash.py  test_level_new.py  test_nut.py  test_part_box_subtract.py  test_part_level.py  test_part_level_rotate.py  test_part_merge.py  test_part_move.py  test_part_multiple_rotate.py  test_part_rotate.py  test_part_side_level.py  test_sides.py  test_slot.py  test_sphere.py
tests/references/: sheet_chamfer.json  sheet_chamfer.stl  sheet_round.json  sheet_round.stl
